--- a/Src/AtmosphericScattering/AtmosphericScattering.vcxproj.filters
+++ b/Src/AtmosphericScattering/AtmosphericScattering.vcxproj.filters
@@ -14,5 +14,6 @@
     <ClInclude Include="atmosphere.h" />
     <ClInclude Include="renderer.h" />
     <ClInclude Include="gui.h" />
+    <ClInclude Include="main.h" />
   </ItemGroup>
 </Project>
